k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-node-demo
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
      
  selector:
    matchLabels:
      app: k8s-node-demo

  template:
    metadata:
      labels:
        app: k8s-node-demo

    spec:
      containers:
        - name: app
          image: k8s-node-demo:1.0.4

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
