k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-node-demo
spec:
  selector:
    app: k8s-node-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
