k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: k8s-node-demo

spec:
  ingressClassName: nginx

  rules:
    - host: node-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-node-demo
                port:
                  number: 80
